[package]
name = "MicroRTS-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }


[dependencies.bevy]
version = "0.14.2"
default-features = false
features = [
    "dynamic_linking", 
    "bevy_color", 
    "bevy_winit", 
    "bevy_ui", 
    "bevy_text", 
    "bevy_state", 
    "bevy_sprite", 
    "bevy_render",
    "multi_threaded",
    # Fix this if working on X11
    "wayland",
]

# Deforestation
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

